--- a/force-app/main/default/lwc/myleaves/myleaves.html
+++ b/force-app/main/default/lwc/myleaves/myleaves.html
@@ -2,8 +2,9 @@
     <lightning-card>
         <lightning-button-icon icon-name="utility:add" variant="border-filled" slot="actions"
             onclick={newRequestClickHandler}></lightning-button-icon>
-        <lightning-datatable key-field="Id" data={myLeaves} columns={columns}
-             ></lightning-datatable>
+        <lightning-datatable key-field="Id" data={myLeaves} columns={columns} onrowaction={rowActionHandler}>
+
+        </lightning-datatable>
 
         <template lwc:if={noRecordsFound}>
             <div class="slds-align_absolute-center slds-p-around_small slds-text-heading_medium">No Records Found</div>
